add cover scripts

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "clean": "rimraf dist && rm -f dist/*",
     "deploy": "npm run clean && npm run build && npm run gh",
     "gh": "gh-pages -d dist",
-    "test": "babel-node ./test/sagas.js | tap-spec"
+    "test-tape": "babel-node ./test/sagas.js | tap-spec",
+    "test": "cd ./app && NODE_ENV=test babel-node ../node_modules/.bin/_mocha --recursive --compilers js:babel-core/register",
+    "cover": "cd ./app && NODE_ENV=test babel-node ../node_modules/.bin/istanbul cover --report text --report html ../node_modules/.bin/_mocha -- --recursive --compilers js:babel-core/register"
   },
   "author": "chiara yen",
   "license": "MIT",
@@ -22,12 +24,16 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.5.0",
+    "babel-preset-stage-3": "^6.5.0",
     "babel-register": "^6.9.0",
     "css-loader": "^0.23.1",
+    "expect": "^1.20.1",
     "express": "^4.13.4",
     "file-loader": "^0.8.5",
     "gh-pages": "^0.11.0",
+    "istanbul": "^1.0.0-alpha",
     "json-loader": "^0.5.4",
+    "mocha": "^2.5.3",
     "postcss-import": "^7.x.x",
     "postcss-loader": "^0.9.1",
     "poststylus": "^0.2.3",
